force-app/main/default/objects/Roster_Data__c/Roster_Data__c.object-meta.xml
<CustomObject>
    <description>&quot;SOX object - This is a junction Object used to connect SmartSheet Roster with Xactly.
Contains Monthly, Quarterly and Semi- Annual Individual Sales Rep Quota targets&quot;</description>
    <label>Roster Data</label>
    <nameField>
        <displayFormat>RD-{000000}</displayFormat>
        <label>Roster Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roster Data&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>