force-app/main/default/objects/Roster_Data__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Created for SAL25-893</description>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>