force-app/main/default/objects/Roster_Data__c/fields/Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan__c</fullName>
    <label>Comp Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>