force-app/main/default/objects/Roster_Data__c/fields/ICP_Region__c.field-meta.xml
<CustomField>
    <fullName>ICP_Region__c</fullName>
    <label>ICP Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>