force-app/main/default/objects/Roster_Data__c/fields/ICP_Status__c.field-meta.xml
<CustomField>
    <fullName>ICP_Status__c</fullName>
    <description>https://rubrik.atlassian.net/browse/SAL24-562</description>
    <label>ICP Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>