force-app/main/default/objects/Roster_Data__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>IsActive</label>
    <length>15</length>
    <type>Text</type>
</CustomField>