force-app/main/default/objects/Roster_Data__c/fields/IsMBO__c.field-meta.xml
<CustomField>
    <fullName>IsMBO__c</fullName>
    <description>SAL25-893 :Field to be deprecated in future. Please do not change FLS or add to page layout.</description>
    <label>(DEPRECATED) IsMBO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>