force-app/main/default/objects/Roster_Data__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>Created for SAL25-893</description>
    <label>Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>