force-app/main/default/objects/Roster_Data__c/fields/Metric1_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Metric1_Effective_Start_Date__c</fullName>
    <label>Metric1 Effective Start Date</label>
    <type>Date</type>
</CustomField>