force-app/main/default/objects/Roster_Data__c/fields/Metric1_M3_Quota__c.field-meta.xml
<CustomField>
    <fullName>Metric1_M3_Quota__c</fullName>
    <description>SAL25-893 :Field to be deprecated in future. Please do not change FLS or add to page layout.</description>
    <label>(DEPRECATED) Metric1 M3 Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>