force-app/main/default/objects/Roster_Data__c/fields/Metric1_Q2_Quota__c.field-meta.xml
<CustomField>
    <fullName>Metric1_Q2_Quota__c</fullName>
    <label>Metric1 Q2 Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>