force-app/main/default/objects/Roster_Data__c/fields/Metric1_Q3_Quota__c.field-meta.xml
<CustomField>
    <fullName>Metric1_Q3_Quota__c</fullName>
    <description>Created for SAL25-893</description>
    <label>Metric1 Q3 Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>