force-app/main/default/objects/Roster_Data__c/fields/Metric2_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Metric2_Effective_Start_Date__c</fullName>
    <label>Metric2 Effective Start Date</label>
    <type>Date</type>
</CustomField>