force-app/main/default/objects/Roster_Data__c/fields/Metric2_Quota_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric2_Quota_Name__c</fullName>
    <label>Metric2 Quota Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>