force-app/main/default/objects/Roster_Data__c/fields/Metric3_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Metric3_Effective_Start_Date__c</fullName>
    <description>Created for SAL25-893</description>
    <label>Metric3 Effective Start Date</label>
    <type>Date</type>
</CustomField>