force-app/main/default/objects/Roster_Data__c/fields/Metric3_Quota_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric3_Quota_Name__c</fullName>
    <description>Created for SAL25-893</description>
    <label>Metric3 Quota Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>