force-app/main/default/objects/Roster_Data__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Created for SAL25-893</description>
    <label>Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>