force-app/main/default/objects/Roster_Data__c/fields/Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Start_Date__c</fullName>
    <description>This field is to store the plan start date information from Roster</description>
    <label>Plan Start Date</label>
    <type>Date</type>
</CustomField>