force-app/main/default/objects/Roster_Data__c/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <description>Created for SAL25-893</description>
    <label>Plan Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>