force-app/main/default/objects/Roster_Data__c/fields/Position_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Position_Effective_Date__c</fullName>
    <label>Position Effective Date</label>
    <type>Date</type>
</CustomField>