force-app/main/default/objects/Roster_Data__c/fields/Position_Name__c.field-meta.xml
<CustomField>
    <fullName>Position_Name__c</fullName>
    <label>Position Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>