force-app/main/default/objects/Roster_Data__c/fields/Ready_to_Upload__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Upload</label>
    <type>Checkbox</type>
</CustomField>