force-app/main/default/objects/Roster_Data__c/fields/Sales_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Role_Type__c</fullName>
    <description>Created for SAL25-893</description>
    <label>Sales Role Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>