force-app/main/default/objects/Roster_Data__c/fields/SFDC_ICP_Region__c.field-meta.xml
<CustomField>
    <fullName>SFDC_ICP_Region__c</fullName>
    <description>https://rubrik.atlassian.net/browse/SAL24-562</description>
    <label>SFDC ICP Region</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>