force-app/main/default/objects/Roster_Data__c/fields/TART__c.field-meta.xml
<CustomField>
    <fullName>TART__c</fullName>
    <label>TART</label>
    <length>255</length>
    <type>Text</type>
</CustomField>