force-app/main/default/objects/Roster_Data__c/fields/TART_Assignment__c.field-meta.xml
<CustomField>
    <fullName>TART_Assignment__c</fullName>
    <label>TART Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>