force-app/main/default/objects/Roster_Data__c/fields/Territory_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Territory_Effective_Start_Date__c</fullName>
    <label>Territory Effective Start Date</label>
    <type>Date</type>
</CustomField>