force-app/main/default/objects/Roster_Data__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <description>Created for SAL25-893</description>
    <label>Theater</label>
    <length>255</length>
    <type>Text</type>
</CustomField>