force-app/main/default/objects/Roster_Data__c/fields/Xactly_Title__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Title__c</fullName>
    <label>Xactly Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>